<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Ajustament</string>
    <string name="alimentos_fragment">Aliments</string>
    <string name="app_name">Calories Pointer</string>
    <string name="calculadora_fragment">Calculadora IMC</string>
    <string name="progreso_fragment">Progrés</string>
    <string name="calendario_fragment">Calendari</string>
    <string name="configuracion_fragment">Configuracio</string>
    <string name="contra_olvidada">Has oblidat la teva contraseña?</string>
    <string name="icon">Logo caloriesPointer</string>
    <string name="iniciar_sessi">Iniciar Sessió</string>
    <string name="inicio_fragment">Inici</string>
    <string name="mantenir_sessi_iniciada">Mantenir Sessió Iniciada</string>
    <string name="nav_header_desc">Encapçalat del navegador</string>
    <string name="navigation_drawer_close">Tanca navigation drawer</string>
    <string name="navigation_drawer_open">Obre navigation drawer</string>
    <string name="password">Contrasenya</string>
    <string name="registrar">Registrar-se</string>
    <string name="title_activity_inicio">IniciActivity</string>
    <string name="user">Nom d\'usuari</string>
    <string name="logout">Tancar sessió</string>
    <string name="consejos_fragment">Consells</string>
    <string name="dialog_message">Vols eliminar aquest aliment?</string>
    <string name="dialog_message_add">Vols afegir aquest aliment?</string>
    <string name="dialog_quantity">Introdueixi quantitat ingerida:</string>
    <string name="quantity_ingested">Quantitat Ingerida</string>
    <string name="quantity">Quantitat</string>

    <string name="dialog_title">Gestió d\'aliments</string>
    <string name="ok">Eliminar</string>
    <string name="cancel">Cancel·lar</string>
    <string name="title">Títol</string>
    <string name="advice">Consell</string>
    <string name="introduce_name">Introdueixi el seu nom:</string>
    <string name="add">Afegir</string>
    <string name="height">Alçada</string>
    <string name="weight">Pes</string>
    <string name="result">Resultat</string>
    <string name="wait_dialog">Esperi un moment...</string>
    <string name="add_values_n">Afegeix els valors nutricionals:</string>
    <string name="add_changes">Afegeix els teus canvis:</string>
    <string name="name">Nom</string>
    <string name="unity">Unitat</string>
    <string name="brand">Marca</string>
    <string name="grease">Greixos</string>
    <string name="carbohydrate">Hidrats de Carboni</string>
    <string name="energy_value">Valor Energètic (Kcal)</string>
    <string name="protein">Proteïnes</string>
    <string name="add_aliment">Afegir Aliment</string>
    <string name="modify_aliment">Modificar Aliment</string>
    <string name="add_IMC">Afegeix el teu IMC</string>
    <string name="prefer_no">No / Prefereixo no contestar</string>
    <string name="overweight">Sobrepès</string>
    <string name="bulimia">Bulímia</string>
    <string name="anorexy">Anorèxia</string>
    <string name="add_advice">Afegir Consell</string>
    <string name="modify_advice">Modificar Consell</string>
    <string name="mail">Correu electrònic</string>
    <string name="disorder">Trastorn</string>
    <string name="save">Guardar</string>
    <string name="language">Idioma</string>
    <string name="write_mail">Escriu el teu correu</string>
    <string name="back_password">RECUPERAR CONTRASENYA</string>
    <string name="report">Reportar</string>
    <string name="report_advice">Usuari Reportat</string>
    <string name="no_feed">No has creat aliments encara</string>
    <string name="pls_quantity">Si us plau, introdueixi una quantitat.</string>


</resources>