<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/add_values_n"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/secondary_text_light"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etAnadirNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:maxLength="4"
                    android:selectAllOnFocus="false"
                    android:textColor="@android:color/secondary_text_light" />

                <EditText
                    android:id="@+id/etAnadirMarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="50dp"
                    android:ems="10"
                    android:hint="@string/brand"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/secondary_text_light" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etAnadirCantidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/quantity"
                        android:inputType="number"
                        android:maxLength="4"
                        android:textColor="@android:color/secondary_text_light" />

                    <EditText
                        android:id="@+id/etAnadirUnidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/unity"
                        android:inputType="textPersonName"
                        android:maxLength="2"
                        android:textColor="@android:color/secondary_text_light" />

                </LinearLayout>

                <EditText
                    android:id="@+id/etAnadirGrasas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/grease"
                    android:inputType="number|numberDecimal"
                    android:maxLength="6"
                    android:textColor="@android:color/secondary_text_light" />

                <EditText
                    android:id="@+id/etAnadirHidratos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/carbohydrate"
                    android:inputType="numberDecimal"
                    android:maxLength="6"
                    android:textColor="@android:color/secondary_text_light" />

                <EditText
                    android:id="@+id/etAnadirProteinas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="50dp"
                    android:ems="10"
                    android:hint="@string/protein"
                    android:inputType="numberDecimal"
                    android:maxLength="6" />

                <EditText
                    android:id="@+id/etAnadirCalorias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="40dp"
                    android:hint="@string/energy_value"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColor="@android:color/secondary_text_light" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fabDenegarAlimento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|start"
                        android:layout_margin="@dimen/fab_margin"
                        android:layout_marginStart="339dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        app:backgroundTint="#EB0202"
                        app:fabSize="normal"
                        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fabAceptarAlimento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:layout_margin="@dimen/fab_margin"
                        android:layout_weight="1"
                        android:clickable="true"
                        app:backgroundTint="#76C91B"
                        app:fabSize="normal"
                        app:srcCompat="@android:drawable/ic_menu_save" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>