<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.consejos.AnadirConsejoActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:text="@string/title"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="50" />

            <TextView
                android:id="@+id/tvText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:text="@string/advice"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etText"
                android:layout_width="match_parent"
                android:layout_height="207dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="204dp">

                <RadioButton
                    android:id="@+id/rb_anorexia"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/anorexy"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/secondary_text_light"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_bulimia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/bulimia"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/secondary_text_light"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_sobrepeso"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/overweight"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/secondary_text_light"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_no"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="20dp"
                    android:checked="true"
                    android:text="@string/prefer_no"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/secondary_text_light"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabAceptarConsejo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="@dimen/fab_margin"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:backgroundTint="#76C91B"
                    app:fabSize="normal"
                    app:srcCompat="@android:drawable/ic_menu_save" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabDenegarConsejo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_margin="@dimen/fab_margin"
                    android:layout_marginStart="339dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:backgroundTint="#EB0202"
                    app:fabSize="normal"
                    app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>